--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -587,7 +587,7 @@ img {
   position: relative;
   background-color: var(--container-color);
   padding: 3.5rem .5rem 1.25rem 1.5rem;
-  border-radius: .25rem;
+  border-radius: 2.25rem;
   box-shadow: 0 2px 4px rgba(0, 0, 0, .15);
   transition: .3s;
 }
@@ -1230,7 +1230,7 @@ footer .footer__social a:hover {
   }
 
   .services__container {
-    grid-template-columns: repeat(3, 238px);
+    grid-template-columns: repeat(2, 238px);
   }
 
   .swiper-error{
