--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1153,7 +1153,9 @@ footer .footer__social a:hover {
   }
 
   .services__modal-content {
-    width: 1050px;
+    width: 1100px;
+    max-height: 650px;
+    overflow-y: auto;
   }
 
   .swiper-error{
