--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -640,6 +640,7 @@ img {
   background-color: var(--container-color);
   padding: 1.5rem;
   border-radius: .5rem;
+  overflow:auto;
 }
 
 .services__modal-services {
