--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -548,6 +548,14 @@ img {
   width: 94%;
 }
 
+.skills__Pandas {
+  width: 80%;
+}
+
+.skills__Selenium {
+  width: 82%;
+}
+
 .skills__blender {
   width: 50%;
 }
