--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -648,7 +648,9 @@ img {
   background-color: var(--container-color);
   padding: 1.5rem;
   border-radius: .5rem;
-  overflow:auto;
+  width: 1100px;
+  max-height: 650px;
+  overflow: auto;
 }
 
 .services__modal-services {
